--- a/my_resume.tex
+++ b/my_resume.tex
@@ -191,7 +191,7 @@
 \section{Skills}
  \resumeSubHeadingListStart
    \item{
-     \textbf{Languages}{: C++, Python, Java, SQL}
+     \textbf{Languages}{: C++, Python, Java, LaTeX, SQL}
      }
    \item{
      \textbf{Technologies}{: VSC, Eclipse, Pycharm}
