--- a/my_resume.tex
+++ b/my_resume.tex
@@ -157,7 +157,7 @@
       {DubHacks}{Fall 2022}
       {Language, program}{Fall 2022}
       \resumeItemListStart
-        \resumeItem{Participated in annual UW DubHacks event}
+        \resumeItem{Participated in the annual UW DubHacks event}
         {}
         \resumeItem{Collaborated in a concentrated team environment to produce quality code}
         {}
