Updated projects on resume

--- a/my_resume.tex
+++ b/my_resume.tex
@@ -154,17 +154,19 @@
 \resumeSubHeadingListStart
 
     \resumeHeadingsub
-      {DubHacks}{Fall 2022}
-      {Language, program}{Fall 2022}
+      {\href{https://ecologykeystonenetwork.netlify.app/}{DubHacks - Ecology Keystone Network}}{Fall 2022}
+      {Javascript, HTML}{Fall 2022}
       \resumeItemListStart
-        \resumeItem{Participated in the annual UW DubHacks event}
+        \resumeItem{Served vital role in initial planning and proof of concept and helped in creating minimum viable product}
+        {}
+        \resumeItem{Competed in environment track, creating a project raising awareness of ongoing natural disasters around the world}
         {}
         \resumeItem{Collaborated in a concentrated team environment to produce quality code}
         {}
       \resumeItemListEnd
   
     \resumeHeadingsub
-      {Brick Breakout}{Fall 2021}
+      {\href{https://github.com/ReaganVu29/Brick-Breakout}{Brick Breakout}}{Fall 2021}
       {Java, Eclipse}{Fall 2021}
       \resumeItemListStart
         \resumeItem{Designed and implemented various systematic elements and constraints}
@@ -182,8 +184,7 @@
         \resumeItem{Served as primary game tester and debugger}
         {}
       \resumeItemListEnd
-%     \resumeSubItem{Mac Setup}
-%       {Book that gives step by step instructions on setting up developer environment on Mac OS.}
+      
   \resumeSubHeadingListEnd
 
 %
@@ -191,13 +192,13 @@
 \section{Skills}
  \resumeSubHeadingListStart
    \item{
-     \textbf{Languages}{: C++, Python, Java, LaTeX, SQL}
+     \textbf{Languages}{: C++, Python, Java, LaTeX, SQL, HTML, Markdown}
      }
    \item{
      \textbf{Technologies}{: VSC, Eclipse, Pycharm}
      }
    \item{
-     \textbf{Relevant Course Work}{: OOP I, OOP II, Software Engineering, Data Structures, Algorithms, Discrete Math, Database Systems, Management Principles}
+     \textbf{Relevant Course Work}{: OOP I, OOP II, Software Engineering, Data Structures, Algorithms, Discrete Math, Database Systems, Management Principles, Technical Writing}
    }
  \resumeSubHeadingListEnd
 
