--- a/my_resume.tex
+++ b/my_resume.tex
@@ -176,7 +176,7 @@
       \resumeItemListEnd
 
     \resumeHeadingsub
-      {Edhesive Pokemon Game}{Spring 2017}
+      {\href{https://github.com/ReaganVu29/pokemon-edhesive}{Pokemon Edhesive}}{Spring 2017}
       {RPG Maker XP}{Spring 2017}
       \resumeItemListStart
         \resumeItem{Contributed ideas and aided in implementation of game elements}
@@ -193,9 +193,6 @@
  \resumeSubHeadingListStart
    \item{
      \textbf{Languages}{: C++, Python, Java, LaTeX, SQL, HTML, Markdown}
-     }
-   \item{
-     \textbf{Technologies}{: VSC, Eclipse, Pycharm}
      }
    \item{
      \textbf{Relevant Course Work}{: OOP I, OOP II, Software Engineering, Data Structures, Algorithms, Discrete Math, Database Systems, Management Principles, Technical Writing}
