--- a/my_resume.tex
+++ b/my_resume.tex
@@ -1,204 +1,191 @@
-%-------------------------
-% Resume in Latex
-% Author : Sourabh Bajaj
-% Website: https://github.com/sb2nov/resume
-% License : MIT
-%------------------------
+\documentclass[a4paper,12pt]{article}
 
-\documentclass[letterpaper,11pt]{article}
+%----------------------------------------------------------------------------------------
+%	FONT
+%----------------------------------------------------------------------------------------
 
-\usepackage{latexsym}
-\usepackage[empty]{fullpage}
-\usepackage{titlesec}
-\usepackage{marvosym}
-\usepackage[usenames,dvipsnames]{color}
-\usepackage{verbatim}
+% % fontspec allows you to use TTF/OTF fonts directly
+% \usepackage{fontspec}
+% \defaultfontfeatures{Ligatures=TeX}
+
+% % modified for ShareLaTeX use
+% \setmainfont[
+% SmallCapsFont = Fontin-SmallCaps.otf,
+% BoldFont = Fontin-Bold.otf,
+% ItalicFont = Fontin-Italic.otf
+% ]
+% {Fontin.otf}
+
+%----------------------------------------------------------------------------------------
+%	PACKAGES
+%----------------------------------------------------------------------------------------
+\usepackage{url}
+\usepackage{parskip} 	
+
+%other packages for formatting
+\RequirePackage{color}
+\RequirePackage{graphicx}
+\usepackage[usenames,dvipsnames]{xcolor}
+\usepackage[scale=0.9]{geometry}
+
+%tabularx environment
+\usepackage{tabularx}
+
+%for lists within experience section
 \usepackage{enumitem}
-\usepackage[pdftex]{hyperref}
-\usepackage{fancyhdr}
+
+% centered version of 'X' col. type
+\newcolumntype{C}{>{\centering\arraybackslash}X} 
+
+%to prevent spillover of tabular into next pages
+\usepackage{supertabular}
+\usepackage{tabularx}
+\newlength{\fullcollw}
+\setlength{\fullcollw}{0.47\textwidth}
+
+%custom \section
+\usepackage{titlesec}				
+\usepackage{multicol}
+\usepackage{multirow}
+
+%CV Sections inspired by: 
+%http://stefano.italians.nl/archives/26
+\titleformat{\section}{\Large\scshape\raggedright}{}{0em}{}[\titlerule]
+\titlespacing{\section}{0pt}{10pt}{10pt}
+
+%for publications
+\usepackage[style=authoryear,sorting=ynt, maxbibnames=2]{biblatex}
+
+%Setup hyperref package, and colours for links
+\usepackage[unicode, draft=false]{hyperref}
+\hypersetup{colorlinks,breaklinks,urlcolor=linkcolour,linkcolor=linkcolour}
+\addbibresource{citations.bib}
+\setlength\bibitemsep{1em}
+
+%for social icons
 \usepackage{fontawesome5}
 
+%debug page outer frames
+%\usepackage{showframe}
 
-\pagestyle{fancy}
-\fancyhf{} % clear all header and footer fields
-\fancyfoot{}
-\renewcommand{\headrulewidth}{0pt}
-\renewcommand{\footrulewidth}{0pt}
-
-% Adjust margins
-\addtolength{\oddsidemargin}{-0.375in}
-\addtolength{\evensidemargin}{-0.375in}
-\addtolength{\textwidth}{1in}
-\addtolength{\topmargin}{-.5in}
-\addtolength{\textheight}{1.0in}
-
-\urlstyle{same}
-
-\raggedbottom
-\raggedright
-\setlength{\tabcolsep}{0in}
-
-% Sections formatting
-\titleformat{\section}{
-  \vspace{-4pt}\scshape\raggedright\large
-}{}{0em}{}[\color{black}\titlerule \vspace{-5pt}]
-
-%-------------------------
-% Custom commands
-\newcommand{\resumeItem}[2]{
-  \item\small{
-    { #1 \vspace{-2pt}}
-  }
-}
-
-\newcommand{\resumeSubheading}[4]{
-  \vspace{-1pt}\item
-    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-      \textbf{#1} & #2 \\
-      \textit{\small#3} & \textit{\small #4} \\
-    \end{tabular*}\vspace{-5pt}
-}
-
-\newcommand{\resumeHeadingsub}[4]{
-  \vspace{-1pt}\item
-    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-      \textbf{#1}  \\
-      \textit{\small#3} & \textit{\small #4} \\
-    \end{tabular*}\vspace{-5pt}
-}
-
-\newcommand{\resumeSubItem}[2]{\resumeItem{#1}{#2}\vspace{-4pt}}
-
-\renewcommand{\labelitemii}{$\circ$}
-
-\newcommand{\resumeSubHeadingListStart}{\begin{itemize}[leftmargin=*]}
-\newcommand{\resumeSubHeadingListEnd}{\end{itemize}}
-\newcommand{\resumeItemListStart}{\begin{itemize}}
-\newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
-
-%-------------------------------------------
-%%%%%%  CV STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
+%----------------------------------------------------------------------------------------
+%	BEGIN DOCUMENT
+%----------------------------------------------------------------------------------------
 \begin{document}
 
-%----------HEADING-----------------
-\begin{center}
-    {\Huge \scshape Reagan Vu} \\ \vspace{1pt}{\raisebox{-0.2\height}\faEnvelope\ {reaganvu29@gmail.com}} ~ 
-    \vspace{1pt}{\raisebox{-0.2\height}\faMobile\ {425-306-6200}} ~ 
-    \href{https://www.linkedin.com/in/reagan-vu-66a922173/}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/ReaganVu29}}  ~
-    \href{https://github.com/ReaganVu29}{\raisebox{-0.2\height}\faGithub\ \underline{github.com/ReaganVu29}}
-    \vspace{-8pt}
-\end{center}
+% non-numbered pages
+\pagestyle{empty} 
 
+%----------------------------------------------------------------------------------------
+%	TITLE
+%----------------------------------------------------------------------------------------
 
-%-----------EDUCATION-----------------
+% \begin{tabularx}{\linewidth}{ @{}X X@{} }
+% \huge{Your Name}\vspace{2pt} & \hfill \emoji{incoming-envelope} email@email.com \\
+% \raisebox{-0.05\height}\faGithub\ username \ | \
+% \raisebox{-0.00\height}\faLinkedin\ username \ | \ \raisebox{-0.05\height}\faGlobe \ mysite.com  & \hfill \emoji{calling} number
+% \end{tabularx}
+
+\begin{tabularx}{\linewidth}{@{} C @{}}
+\Huge{Reagan Vu} \\[7.5pt]
+\href{https://github.com/ReaganVu29}{\raisebox{-0.05\height}\faGithub\ ReaganVu29} \ $|$ \ 
+\href{https://www.linkedin.com/in/reagan-vu-66a922173/}{\raisebox{-0.05\height}\faLinkedin\ Reagan Vu} \ $|$ \ 
+\href{mailto:reaganvu29@gmail.com}{\raisebox{-0.05\height}\faEnvelope \ reaganvu29@gmail.com} \ $|$ \ 
+\href{tel:+425-306-6200}{\raisebox{-0.05\height}\faMobile \ +425-306-6200} \\
+\end{tabularx}
+
+%----------------------------------------------------------------------------------------
+%	EDUCATION
+%----------------------------------------------------------------------------------------
 \section{Education}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {University of Washington}{Bothell, WA}
-      {Computer Science and Software Engineering Undergraduate}{Sep. 2021 -- Present}
-    \resumeSubheading
-      {Highline Community College}{Des Moines, WA}
-      {Computer Science Pre-Major}{Sep. 2019 -- June 2021}
-    \resumeSubheading
-      {Green River Community College}{Auburn, WA}
-      {Computer Science Pre-Major}{Jan. 2020 -- Jun 2020}
-    \resumeSubheading
-      {Hazen High School}{Renton, WA}
-      {High School Diploma}{Sep. 2015 -- 2019}
-  \resumeSubHeadingListEnd
 
+\begin{tabularx}{\linewidth}{ @{}l r@{} }
+\textbf{University of Washington} & \hfill Sept 2021 - Present \\[3.75pt]
+\multicolumn{1}{@{}X@{}}{Undergraduate in Computer Science and Software Engineering} & {\small Bothell, WA}  \\
+\end{tabularx}
 
-%-----------EXPERIENCE-----------------
-\section{Work History}
-  \resumeSubHeadingListStart
+\begin{tabularx}{\linewidth}{ @{}l r@{} }
+\textbf{Highline Community College} & \hfill Sept 2019 - June 2021 \\[3.75pt]
+\multicolumn{1}{@{}X@{}}{} & {\small Des Moines, WA} \vspace{-8pt} \\
+\end{tabularx}
 
-    \resumeSubheading
-      {SEIU 775 Benefits Group}{Renton, WA}
-      {Individual Provider}{Nov 2020 - Mar 2021}
-      \resumeItemListStart
-        \resumeItem{Provided day-to-day care for patients with disabilities}
-        {}
-        \resumeItem{Documented medical history of medical care for serviced patients}
-        {}
-        \resumeItem{Tracked progress and news regarding the coronavirus pandemic for patient readiness and health}
-        {}
-      \resumeItemListEnd
+%----------------------------------------------------------------------------------------
+% EXPERIENCE SECTIONS
+%----------------------------------------------------------------------------------------
 
-    \resumeSubheading
-      {Newport Hills Swim and Tennis Club}{Bellevue, WA}
-      {Lifeguard}{Jun 2019 - Sep 2019}
-      \resumeItemListStart
-        \resumeItem{Collaborated with a team in high pressure situations to ensure patron safety}
-        {}
-        \resumeItem{Maintained gym equipment and ensured pool chemical levels met safety standards}
-        {}
-        \resumeItem{Enforced and upheld facility rules and policies}
-        {}
-      \resumeItemListEnd
-
-    \resumeSubheading
-      {Kumon Institute of Education}{Renton, WA}
-      {Academic Tutor}{Jan 2019 - Jun 2019}
-      \resumeItemListStart
-        \resumeItem{Managed and facilitated the learning sessions for kids spanning from elementary to middle school level}
-        {}
-      \resumeItemListEnd
-
-  \resumeSubHeadingListEnd
-
-
-%-----------PROJECTS-----------------
+%Projects
 \section{Projects}
-\resumeSubHeadingListStart
 
-    \resumeHeadingsub
-      {\href{https://ecologykeystonenetwork.netlify.app/}{DubHacks - Ecology Keystone Network}}{Fall 2022}
-      {Javascript, HTML}{Fall 2022}
-      \resumeItemListStart
-        \resumeItem{Served vital role in initial planning and proof of concept and helped in creating minimum viable product}
-        {}
-        \resumeItem{Competed in environment track, creating a project raising awareness of ongoing natural disasters around the world}
-        {}
-        \resumeItem{Collaborated in a concentrated team environment to produce quality code}
-        {}
-      \resumeItemListEnd
-  
-    \resumeHeadingsub
-      {\href{https://github.com/ReaganVu29/Brick-Breakout}{Brick Breakout}}{Fall 2021}
-      {Java, Eclipse}{Fall 2021}
-      \resumeItemListStart
-        \resumeItem{Designed and implemented various systematic elements and constraints}
-        {}
-        \resumeItem{Solved bugs related to the game's application window}
-        {}
-      \resumeItemListEnd
+\begin{tabularx}{\linewidth}{ @{}l r@{} }
+\href{https://github.com/Mistralton/procrabstinator}{\textbf{Procrabstinator}} - Tauri, Next.js, React, Rust, SQLite, Astro & \hfill Treasure Hacks 2023 \\[3.75pt]
+\multicolumn{2}{@{}X@{}}{
+\begin{minipage}[t]{\linewidth}
+    \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
+        \item[$\bullet$] Collaborated in group of three to produce a desktop application that helps users stop procrastinating through encouragement of good habits
+        \item[$\bullet$] Devised and implemented project schema for SQLite database to structure upcoming tasks and distracting applications
+        \item[$\bullet$] Designed and oversaw development of video and graphical assets, including presentation and logo, as well as writing documentation
+    \end{itemize}
+    \end{minipage}
+}
+\end{tabularx}
 
-    \resumeHeadingsub
-      {\href{https://github.com/ReaganVu29/pokemon-edhesive}{Pokemon Edhesive}}{Spring 2017}
-      {RPG Maker XP}{Spring 2017}
-      \resumeItemListStart
-        \resumeItem{Contributed ideas and aided in implementation of game elements}
-        {}
-        \resumeItem{Served as primary game tester and debugger}
-        {}
-      \resumeItemListEnd
-      
-  \resumeSubHeadingListEnd
+\begin{tabularx}{\linewidth}{ @{}l r@{} }
+\href{https://ecologykeystonenetwork.netlify.app/}{\textbf{Ecology Keystone Network}} - JavaScript, Mapbox & \hfill DubHacks 2022 \\[3.75pt]
+\multicolumn{2}{@{}X@{}}{
+\begin{minipage}[t]{\linewidth}
+    \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
+        \item[$\bullet$] Cooperated with four people to develop a web app allowing users to visualize and comprehend the scale of ongoing global ecological calamities 
+        \item[$\bullet$] Served vital role in researching and designing project elements, allowing group to comfortably reach minimum viable product
+        \item[$\bullet$] Planned and coordinated group stand-ups in a time pressed environment to ensure effective development workflow and communication
+    \end{itemize}
+    \end{minipage}
+}
+\end{tabularx}
 
-%
-%--------PROGRAMMING SKILLS------------
+\begin{tabularx}{\linewidth}{ @{}l r@{} }
+\href{https://github.com/ReaganVu29/pokemon-edhesive}{\textbf{Pokemon Edhesive}} - RPG Maker XP & \hfill Spring 2017 \\[3.75pt]
+\multicolumn{2}{@{}X@{}}{
+\begin{minipage}[t]{\linewidth}
+    \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
+        \item[$\bullet$] Formulated game mechanics and algorithms to create feature complete fan Pokemon game consisting of eight gyms and Pokemon league
+        \item[$\bullet$] Compiled and edited audio and graphical assets to usable state for consumption by game engine
+    \end{itemize}
+    \end{minipage}
+}
+\end{tabularx}
+
+%----------------------------------------------------------------------------------------
+%	SKILLS
+%----------------------------------------------------------------------------------------
 \section{Skills}
- \resumeSubHeadingListStart
-   \item{
-     \textbf{Languages}{: C++, Python, Java, LaTeX, SQL, HTML, Markdown}
-     }
-   \item{
-     \textbf{Relevant Course Work}{: OOP I, OOP II, Software Engineering, Data Structures, Algorithms, Discrete Math, Database Systems, Management Principles, Technical Writing}
-   }
- \resumeSubHeadingListEnd
+\begin{tabularx}{\linewidth}{@{}l X@{}}
+Languages &  \normalsize{C++, Java, Python, SQL, HTML} \vspace{3pt} \\
+Frameworks &  \normalsize{Markdown, Java Swing} \vspace{3pt} \\
+Tools &  \normalsize{SQLite, Adobe Premier, GIMP, Git} \\
+\end{tabularx}
 
+%Experience
+\section{Work Experience}
 
-%-------------------------------------------
+\begin{tabularx}{\linewidth}{ @{}l r@{} }
+\textbf{SEIU 775 Benefits Group} & \hfill Nov 2020 - Mar 2021 \\[3.75pt]
+\multicolumn{1}{@{}X@{}}{Individual Provider} & {\small Renton, WA} \vspace{3pt} \\
+\multicolumn{2}{@{}X@{}}{
+\begin{minipage}[t]{\linewidth}
+    \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
+        \item[$\bullet$] Provided day-to-day care for patients with disabilities
+        \item[$\bullet$] Documented medical history of medical care for serviced patients
+    \end{itemize}
+    \end{minipage}
+}
+\end{tabularx}
+
+\begin{tabularx}{\linewidth}{ @{}l r@{} }
+\textbf{Newport Hills Swim and Tennis Club} & \hfill Jun 2019 - Sept 2019 \\[3.75pt]
+\multicolumn{1}{@{}X@{}}{Lifeguard} & {\small Bellevue, WA}  \\
+\end{tabularx}
+
+\vfill
+\center{\footnotesize Last updated: \today}
+
 \end{document}
