--- a/my_resume.tex
+++ b/my_resume.tex
@@ -131,19 +131,22 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {University of Washington}{Sep 2021 -- Present}
+      {University of Washington}{Sept 2021 -- Present}
       {Bachelor of Science in Computer Science and Software Engineering}{Bothell, WA}
-    \resumeSubheading
-      {Highline Community College}{Sep 2019 -- Jun 2021}
-      {}{Des Moines, WA}
   \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------
 \section{Projects}
     \vspace{-5pt}
     \resumeSubHeadingListStart
+          \resumeProjectHeading
+        {\textbf{\href{https://reaganvu29.github.io/Personal-Website/}{Portfolio Website}} - {\href{https://reaganvu29.github.io/Personal-Website/}{https://reaganvu29.github.io/Personal-Website/}} $|$ \emph{HTML, CSS}}{Sept 2023}
+          \resumeItemListStart
+            \resumeItem{Created my own personal portfolio website that highlights my skills and projects}
+          \resumeItemListEnd
+          \vspace{-13pt}
       \resumeProjectHeading
-        {\textbf{\href{https://github.com/Mistralton/Package-Tracker}{Package Tracker}} - Transport Hacks $|$ \emph{TypeScript, Next.js, Tailwind, Mapbox, Firebase, Auth0}}{Feb 2023}
+        {\textbf{\href{https://packagetracker.tech/}{Package Tracker}} - {\href{https://packagetracker.tech/}{https://packagetracker.tech/}} $|$ \emph{TypeScript, Next.js, Tailwind, Mapbox, Firebase, Auth0}}{Feb 2023}
           \resumeItemListStart
             \resumeItem{Managed a team of three in making a full-stack web application for TransportHacks hosted by Major League Hacking, winning best overall project}
             \resumeItem{Researched viable shipping companies and their respective tracking APIs to determine feasibility of integration with backend data layer}
@@ -151,7 +154,7 @@
           \resumeItemListEnd
           \vspace{-13pt}
       \resumeProjectHeading
-          {\textbf{\href{https://github.com/Mistralton/Replayed}{Replayed}} - Bay Area Hacks $|$ \emph{TypeScript, SvelteKit, Tailwind, Chart.js, Supabase}}{Feb 2023}
+          {\textbf{\href{https://replayedgg.vercel.app/}{Replayed}} - {\href{https://replayedgg.vercel.app/}{https://replayedgg.vercel.app/}} $|$ \emph{TypeScript, SvelteKit, Tailwind, Chart.js, Supabase}}{Feb 2023}
           \resumeItemListStart
             \resumeItem{Collaborated with group of three to make a full-stack web application incorporating quiz, game, and social aspects with real time comment system}
             \resumeItem{Streamlined website development process by creating prototype for project design using Figma and Excalidraw, implementing UI and UX principles}
@@ -159,7 +162,7 @@
           \resumeItemListEnd
           \vspace{-13pt}
       \resumeProjectHeading
-          {\textbf{\href{https://github.com/Mistralton/procrabstinator-website}{Procrabstinator}} - Treasure Hacks $|$ \emph{Astro, Tauri, Next.js, React, Rust, SQLite}}{Jan 2023}
+          {\textbf{\href{https://procrabstinator.vercel.app/}{Procrabstinator}} - {\href{https://procrabstinator.vercel.app/}{https://procrabstinator.vercel.app/}} $|$ \emph{Astro, Tauri, Next.js, React, Rust, SQLite}}{Jan 2023}
           \resumeItemListStart
             \resumeItem{Participated with group of three to produce a desktop application that helps users stop procrastinating through encouragement of good habits}
             \resumeItem{Devised and implemented project schema for SQLite database to structure upcoming tasks and distracting applications}
@@ -167,24 +170,24 @@
           \resumeItemListEnd
           \vspace{-13pt}
       \resumeProjectHeading
-          {\textbf{\href{https://github.com/AWin23/Ecology-Keystone-Network}{Ecology Keystone Network}} - DubHacks $|$ \emph{HTML, JavaScript, Mapbox}}{Nov 2022}
+          {\textbf{\href{https://ecologykeystonenetwork.netlify.app/}{Ecology Keystone Network}} - {\href{https://ecologykeystonenetwork.netlify.app/}{https://ecologykeystonenetwork.netlify.app/}} $|$ \emph{HTML, JavaScript, Mapbox}}{Nov 2022}
           \resumeItemListStart
-            \resumeItem{Cooperated with four people to develop a web app allowing users to visualize and comprehend the scale of ongoing global ecological calamities}
+            \resumeItem{Cooperated with four people to develop a web app allowing users to visualize and comprehend the scale of ongoing global ecological disasters}
             \resumeItem{Served vital role in researching and designing project elements, allowing group to comfortably reach minimum viable product in time constrained environment}
             \resumeItem{Planned and coordinated group stand-ups in a time pressed environment to ensure effective development workflow and communication}
           \resumeItemListEnd 
           \vspace{-13pt}
     \resumeSubHeadingListEnd
-\vspace{-8pt}
+\vspace{-2pt}
 
 %
 %-----------PROGRAMMING SKILLS-----------
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: C++, Java, Python, SQL, HTML} \\
+     \textbf{Languages}{: C++, Java, Python, SQL, HTML, CSS} \\
      \textbf{Frameworks}{: Markdown, Java Swing} \\
-     \textbf{Tools}{: SQLite, Adobe Premier, GIMP, Git, Figma} \\
+     \textbf{Tools}{: SQLite, Git, Figma} \\
     }}
  \end{itemize}
  \vspace{-16pt}
@@ -194,27 +197,16 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {SEIU 775 benefits Group}{Nov 2020 -- Mar 2021}
+      {SEIU 775 Benefits Group}{Nov 2020 -- Mar 2021}
       {Individual Provider}{Renton, WA}
-      \resumeItemListStart
-        \resumeItem{Provided day-to-day care for patients with disabilities}
-        \resumeItem{Documented medical history of medical care for serviced patients}
-      \resumeItemListEnd
 
     \resumeSubheading
-      {Newport Hills Swim and Tennis Club}{Jun 2019 -- Sep 2019}
+      {Newport Hills Swim and Tennis Club}{Jun 2019 -- Sept 2019}
       {Lifeguard}{Bellevue, WA}
-      \resumeItemListStart
-        \resumeItem{Collaborated with a team in high pressure situations to ensure patron safety}
-        \resumeItem{Maintained gym equipment and ensured pool chemical levels met OSHA standards}
-    \resumeItemListEnd
 
     \resumeSubheading
       {Kumon Institute of Education}{Jan 2019 -- Jun 2019}
       {Academic Tutor}{Renton, WA}
-      \resumeItemListStart
-        \resumeItem{Managed and facilitated the learning sessions for kids spanning from elementary to middle school level}
-    \resumeItemListEnd
     
   \resumeSubHeadingListEnd
 \vspace{-16pt}
