--- a/my_resume.tex
+++ b/my_resume.tex
@@ -138,13 +138,19 @@
 %-----------PROJECTS-----------
 \section{Projects}
     \vspace{-5pt}
-    \resumeSubHeadingListStart
-          \resumeProjectHeading
+     \resumeSubHeadingListStart
+      \resumeProjectHeading
         {\textbf{\href{https://reaganvu29.github.io/Personal-Website/}{Portfolio Website}} - {\href{https://reaganvu29.github.io/Personal-Website/}{https://reaganvu29.github.io/Personal-Website/}} $|$ \emph{HTML, CSS}}{Sept 2023}
           \resumeItemListStart
             \resumeItem{Created my own personal portfolio website that highlights my skills and projects}
           \resumeItemListEnd
           \vspace{-13pt}
+      \resumeProjectHeading
+        {\textbf{\href{https://reaganvu29.github.io/Weather-App/}{Weather App}} - {\href{https://reaganvu29.github.io/Weather-App/}{https://reaganvu29.github.io/Weather-App/}} $|$ \emph{HTML, CSS, JavaScript}}{Sept 2023}
+          \resumeItemListStart
+            \resumeItem{Weather app using HTML, CSS, and JavaScript that displays information such as temperature, humidity, and wind speed for a provided city using data from the OpenWeatherMap API}
+          \resumeItemListEnd
+          \vspace{-13pt}    
       \resumeProjectHeading
         {\textbf{\href{https://packagetracker.tech/}{Package Tracker}} - {\href{https://packagetracker.tech/}{https://packagetracker.tech/}} $|$ \emph{TypeScript, Next.js, Tailwind, Mapbox, Firebase, Auth0}}{Feb 2023}
           \resumeItemListStart
@@ -185,7 +191,7 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: C++, Java, Python, SQL, HTML, CSS} \\
+     \textbf{Languages}{: C++, Java, Python, SQL, HTML, CSS, JavaScript} \\
      \textbf{Frameworks}{: Markdown, Java Swing} \\
      \textbf{Tools}{: SQLite, Git, Figma} \\
     }}
